tests/negative/syntax/missing_var_init.stream
// EXPECT: Syntax Error
var x; // Missing '= value'